Fix layout collapse

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -151,7 +151,7 @@ ul {
 
 @media screen and (min-width: 600px) {
   .board__lang-box--biggest .board__lang-item {
-    width: 33.334%;
+    width: 33.333%;
   }
 }
 
